create-polkadot-dapp initialization

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quickstart-sdk",
-  "version": "0.1.0",
-  "description": "A quickstart SDK to setup an Polkadot Cloud project",
+  "version": "0.2.0",
+  "description": "A quickstart SDK to setup a Full Stack Dapp using Polkadot Cloud services",
   "main": "index.js",
   "scripts": {
     "test": "jest",
