re-structure project into modules

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ],
     "collectCoverageFrom": [
       "index.js",
+      "src/**/*.js",
       "!**/node_modules/**"
     ],
     "testMatch": [
