--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "quickstart-sdk",
   "version": "0.2.0",
   "description": "A quickstart SDK to setup a Full Stack Dapp using Polkadot Cloud services",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepublishOnly": "npm run build",
+    "start": "node dist/index.js"
   },
   "bin": {
-    "quickstart-sdk": "./index.js"
+    "quickstart-sdk": "./dist/index.js"
   },
   "keywords": [
     "quickstart",
@@ -21,26 +26,46 @@
   "author": "@nomadbitcoin",
   "license": "ISC",
   "dependencies": {
+    "figlet": "^1.8.0",
     "fs-extra": "^11.3.0",
-    "inquirer": "^12.8.2",
-    "figlet": "^1.8.0"
+    "inquirer": "^12.8.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/figlet": "^1.7.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.8",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./jest.setup.js"
     ],
     "collectCoverageFrom": [
-      "index.js",
-      "src/**/*.js",
+      "src/**/*.ts",
+      "!src/**/*.d.ts",
       "!**/node_modules/**"
     ],
     "testMatch": [
-      "**/__tests__/**/*.test.js",
-      "**/?(*.)+(spec|test).js"
+      "**/__tests__/**/*.test.{js,ts}",
+      "**/?(*.)+(spec|test).{js,ts}"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "roots": [
+      "<rootDir>/src",
+      "<rootDir>/__tests__"
     ]
   }
 }
